<resources>
    <string name="app_name">Unknown</string>


    <string name="but_login">登录</string>
    <string name="but_register">注册</string>
    <string name="Account_number">请输入账号</string>
    <string name="Password">请输入密码</string>
    <string name="User_name">请注册账号:</string>
    <string name="User_password">请注册密码</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="User_password2">请确认密码</string>
    <string name="contacts">消息</string>
    <string name="conversation">联系人</string>
    <string name="personal">个人</string>
    <string name="str_news_feed">尬聊</string>
    <string name="close">关灯</string>
    <string name="open">开灯</string>
    <string name="not_scan">无法识别</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="scan_info_text">扫一扫二维码，加我关注</string>
    <string name="agora_app_id">4a24d67093844a2f804e1417047613d3</string>
</resources>
