<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">




        <ImageView
            android:id="@+id/long_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="-160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="138dp"
        android:src="@drawable/long_logo"
        android:layout_marginTop="80dp"/>


    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/btn_login"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="240dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/linearLayout"
       >

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:textSize="15sp"
                android:background="@drawable/name"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLines="1"
                android:id="@+id/et_login_username"
                android:hint="@string/Account_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0.5px"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:textSize="15sp"
                android:background="@drawable/password"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/et_login_password"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/long_but"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_login"
        android:text="@string/but_login"
        android:textColor="@color/btu_login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="460dp"
        android:layout_marginStart="29dp" />

    <Button
        android:id="@+id/register_but"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_login"
        android:text="@string/but_register"
        android:textColor="@color/btu_login"
        android:layout_marginLeft="193dp"
        android:layout_marginTop="460dp"/>



</RelativeLayout>