<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ljj.unknown.activity.MainActivity">
    <RelativeLayout
        android:paddingBottom="5dp"
        android:elevation="5dp"
        android:background="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="尬聊"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_add_friend"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/add_contract"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:layout_marginBottom="50dp"
        android:layout_marginTop="45dp"
        android:id="@+id/viewPager_mian"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f7f5f5"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@drawable/item_message_selector"
            android:clickable="true"
            android:id="@+id/ll_bottom_menu_conversation"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_conversation"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00000000"
                android:clickable="false"
                android:src="@drawable/main_conversation_ash_img" />

            <TextView
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textColor="#000000" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="47dp"
            android:background="#dedbdb" >
        </View>

        <LinearLayout
            android:background="@drawable/item_message_selector"
            android:clickable="true"
            android:id="@+id/ll_bottom_menu_contacts"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_contacts"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00000000"
                android:clickable="false"
                android:src="@drawable/main_contacts_ash_img" />

            <TextView
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversation"
                android:textColor="#000000" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="47dp"
            android:background="#dedbdb" >
        </View>
        <LinearLayout
            android:background="@drawable/item_message_selector"
            android:clickable="true"
            android:id="@+id/ll_bottom_menu_personal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_personal"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#00000000"
                android:clickable="false"
                android:src="@drawable/main_personal_ash_img" />

            <TextView
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dedbdb" >
    </View>

</RelativeLayout>
